syntax = "proto3";

option go_package = "./protobuf/student";
package school_rpc_service.student;

message StudentListRequest{
  uint32 pageSize = 1;
  uint32 pageNo = 2;
}

message CreateStudentRequest{
  string name = 1;
  uint32 age = 2;
  uint32 gender = 3;
  string  mobile = 4;
  string className = 5;
  uint32 grade =6;
}

message UpdateStudentRequest{
  uint64  id = 1;
  string name = 2;
  uint32 age = 3;
  uint32 gender = 4;
  string  mobile = 5;
  string className = 6;
  uint32 grade =7;
}


message StudentListResponse {
  string code = 1;
  string msg = 2;
  repeated Student studentList = 3;
}

message CreateStudentResponse {
  string code = 1;
  string msg = 2;
  int64 id = 3;
}

message UpdateStudentResponse {
  string code = 1;
  string msg = 2;

}

message Student {
  string id = 1;          // 学生 ID
  string name = 2;        // 学生姓名
  uint32 age = 3;          // 学生年龄
  uint32 gender = 4;
  string  mobile = 5;
  string className = 6;
  uint32 grade =7;
}

service StudentService {

  rpc studentList(StudentListRequest) returns (StudentListResponse){}
  rpc createStudent(CreateStudentRequest) returns (CreateStudentResponse){}
  rpc updateStudent(UpdateStudentRequest) returns (UpdateStudentResponse){}
}



